RESOLVED FIXED187713
Release assert in ~TimerBase is getting hit in WK1 apps which uses JSC API directly
https://bugs.webkit.org/show_bug.cgi?id=187713
Summary Release assert in ~TimerBase is getting hit in WK1 apps which uses JSC API di...
Ryosuke Niwa
Reported 2018-07-16 15:29:19 PDT
Apparently, JSC API doesn't grab the web thread lock, as a result, some apps are hitting the release assertion in ~TimerBase. <rdar://problem/41759548>
Attachments
Fixes the crash (1.81 KB, patch)
2018-07-16 15:31 PDT, Ryosuke Niwa
no flags
Fixed non-iOS builds (1.95 KB, patch)
2018-07-16 16:10 PDT, Ryosuke Niwa
simon.fraser: review+
Ryosuke Niwa
Comment 1 2018-07-16 15:31:03 PDT
Created attachment 345124 [details] Fixes the crash
Mark Lam
Comment 2 2018-07-16 15:45:23 PDT
The GTK and wpe build failure looks legit.
Ryosuke Niwa
Comment 3 2018-07-16 16:10:09 PDT
Created attachment 345128 [details] Fixed non-iOS builds
Simon Fraser (smfr)
Comment 4 2018-07-16 19:09:02 PDT
Comment on attachment 345128 [details] Fixed non-iOS builds View in context: https://bugs.webkit.org/attachment.cgi?id=345128&action=review > Source/WebCore/ChangeLog:8 > + Turn this into a debug assertion in WebKit1. This needs more explanation that mentions the JSC lack of WebThreadLock etc, and reference a radar.
Ryosuke Niwa
Comment 5 2018-07-16 19:50:13 PDT
Note You need to log in before you can comment on or make changes to this bug.